# browser-cpu-fingerprinting-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yml  Trunk.toml
api_server/: Cargo.toml
api_server/src/: config.rs  context.rs  main.rs
api_server/src/handlers/: misc.rs
backend/: Cargo.toml  Taskfile-migrations.yml  Taskfile.yml  sqlx-data.json
backend/migrations/: 20230305213619_init.sql
backend/src/: config.rs  context.rs  main.rs
backend/src/handlers/: misc.rs  mod.rs  result.rs
backend/src/repository/: result.rs
classification/: benchmark_examples.ipynb  dataset_visualization.ipynb  main.py  noisy.py  pagesize.py  requirements.txt
common/: Cargo.toml
config/: api_server.yml  backend.yml
deploy/: Taskfile.yml  docker-compose.yml
dev/: Taskfile.yml  docker-compose.yml
docs/: development.md
frontend/: Cargo.toml  Taskfile.yml  index.css  index.html
frontend/.cargo/: config.toml
frontend/src/: app.rs  lib.rs  main.rs  worker.rs
frontend/src/agent/: clock_worker.rs  mod.rs
frontend/src/benchmarks/: benchmark.rs  cpu_cores_count.rs  data_cache_size.rs  dummy.rs  l1d_cache_associativity.rs  l1d_tlb_size.rs  mod.rs  page_size.rs  single_core_performance.rs
frontend/src/clock/: bridge.rs  mod.rs
frontend/src/gui/: app_root.rs  components.rs  mod.rs  renderers.rs
frontend/src/profilers/: cache_associativity.rs  cache_size.rs  load_buffer_size.rs  memory_latencies.rs  mod.rs  multi_core_performance.rs  page_size.rs  prefetcher.rs  single_core_performance.rs  timer_precision.rs  tlb_size.rs
frontend/src/profilers/polyfills/: instant.rs
frontend/src/worker/: clock.rs  mod.rs
frontend/src/worker/benchmarks/: cache_associativity.rs  cache_size.rs  dummy.rs  mod.rs  page_size.rs  single_performance.rs  tlb_size.rs
src/: main.rs
(+17 files in other folders)
