[package]
name = "browser-cpu-fingerprinting-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10.0"
config = "0.13"
tempfile = "3.4.0"
sqlx = { version = "0.6", features = [ "runtime-actix-rustls", "postgres" ] }