[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
common = {path = "../common"}
gloo-net = "0.2"
gloo-console = "0.2"
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Navigator", "Window", "Performance"] }
js-sys = "0.3.61"
yew = { version = "0.20", features = ["csr"] }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
